--- a/proyecto-api/src/index.css
+++ b/proyecto-api/src/index.css
@@ -1,14 +1,47 @@
-*{
-    box-sizing: border-box;
-   
+*, 
+*::before
+*::after   {
+    margin:0;
+    padding: 0;
+    box-sizing: border-box; 
 }
 
 body{
-    background-color: white;
     margin: 0;
+    padding: 0;
 }
 
+html{
+    font-size: 62.5%;
+
+} 
+
+
+a{
+    text-decoration: none;
+    font-family: inherit;
+    color:inherit
+}
+
+a:link, a:visited, a:active {
+    text-decoration:none;
+}
+
+ul, ol {
+    list-style-type: none;
+}
+
+
+p{
+    font-size: 1.8em;
+}
+
+img{
+    width: 100%;
+}
+h1,h2,h3,h4,h5{
+    margin: 0;
+}
 .contenedorLogin{
-    background-color: wheat;
     height: 100vh;
 }
