--- a/proyecto-api/src/pages/login/login.css
+++ b/proyecto-api/src/pages/login/login.css
@@ -80,7 +80,7 @@
 .titulo {
   line-height: 1em;
   font-family: "ChirpHeavy";
-  font-size: 6.4rem;
+  font-size: 640%;
   font-weight: 600;
   align-content: center;
   text-align: left;
@@ -96,12 +96,12 @@
  
 letter-spacing: 5.2px;
  
-  font-size: 3.1rem;
+  font-size: 310%;
 }
 .botonAutenticacion {
   border: 1px solid;
   border-color: rgb(207, 217, 222);
-font-size: 1.4rem;
+font-size: 140%;
   font-family: "ChirpRegular";
   display: flex;
   align-items: center;
@@ -109,7 +109,7 @@ font-size: 1.4rem;
   background-color: white;
   border-radius: 50px;
   height: 38px;
-  width: 300px;
+  max-width: 300px;
   gap: 10px;
   margin: 0 20% 0 0;
 }
