--- a/proyecto-api/src/pages/login/login.css
+++ b/proyecto-api/src/pages/login/login.css
@@ -13,19 +13,66 @@
 
 .loginContenedorPrincipal {
   display: grid;
-  align-content: space-around;
-}
+  padding: 0 10%;
+  justify-items: center;
+
+ }
 .loginContenedor2 {
   margin-top: 3%;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: auto auto;
   align-items: center;
+  justify-content: center;
+  gap: 7%
 }
+
+
+@media(max-width:690px){
+  .loginContenedor2{
+    grid-template-columns: auto;
+    margin: 0 auto;
+    padding: 10%;
+  }
+  }
+
+.logeo{
+  max-width: 728px;
+}
+@media(max-width:690px){
+  .logeo{
+   display: grid;
+
+  }
+  }
 .x {
   width: 100%;
 
-  max-height: 390px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
+@media(max-width:690px){
+
+    .x{
+      max-width: 17rem;
+    }
+   
+}
+.tamañox{
+  max-height: 36rem;
+    display: flex;
+    justify-content: center;
+}
+@media(max-width:690px){
+  .tamañox{
+    max-height:17.1rem;
+    width: 100vw;
+    justify-content: left;
+
+
+  }
+  }
 .contenedorTitulos {
   display: flex;
   flex-direction: column;
@@ -34,27 +81,28 @@
 .titulo {
   line-height: 1em;
   font-family: "ChirpHeavy";
-  font-size: 6.4rem;
+  font-size: 640%;
   font-weight: 600;
-  margin: 0 24% 0 8%;
   align-content: center;
   text-align: left;
-  transform: scale(1.25, 1);
-  padding-right: 9%;
+  letter-spacing: 5.2px;
+  margin-bottom: 5%;
+
 }
 .subtitulo {
   font-family: "ChirpHeavy";
   width: 300px;
   text-align: left;
-  margin: 6% 0;
-  transform: scale(1.12, 1);
-  padding: 0px 0 0 2%;
-  font-size: 3.1rem;
+  margin-bottom: 3%;
+ 
+letter-spacing: 5.2px;
+ 
+  font-size: 310%;
 }
 .botonAutenticacion {
   border: 1px solid;
   border-color: rgb(207, 217, 222);
-font-size: 1.4rem;
+font-size: 140%;
   font-family: "ChirpRegular";
   display: flex;
   align-items: center;
@@ -62,9 +110,10 @@ font-size: 1.4rem;
   background-color: white;
   border-radius: 50px;
   height: 38px;
-  width: 300px;
+  max-width: 300px;
+  min-width: 240px;
   gap: 10px;
-  margin: 0 20% 0 0;
+  
 }
 .crearCuenta {
   font-family: "ChirpBold";
@@ -79,7 +128,8 @@ font-size: 1.4rem;
 }
 .yaTienesCuenta {
   display: flex;
-  height: 176px;
+  margin-top: 3rem;
+  max-height: 176px;
   justify-items: start;
   flex-direction: column;
   gap: 20px;
@@ -114,6 +164,9 @@ font-size: 1.4rem;
   text-decoration: none;
   color: rgb(29, 155, 240);
 }
+.nav{
+  margin-top: 10%;
+}
 .navLogin {
   display: flex;
   gap: 10px;
@@ -121,8 +174,7 @@ font-size: 1.4rem;
   justify-content: center;
   line-height: 1;
   align-items: baseline;
-  margin: 0 auto;
-  width: 90vw;
+  height: 22%;
 }
 .navA {
   width: max-content;
