--- a/proyecto-api/src/pages/login/login.css
+++ b/proyecto-api/src/pages/login/login.css
@@ -131,6 +131,7 @@ margin-bottom: 5%;
   flex-direction: column;
   gap: 20px;
   justify-content: flex-end;
+  min-width: 300px
 }
 
 .yaTienesCuenta__boton {
@@ -162,13 +163,13 @@ margin-bottom: 5%;
   color: rgb(29, 155, 240);
 }
 .nav {
-  margin-top: 10%;
+  margin-top: 7%;
 }
 .navLogin {
   display: flex;
   gap: 10px;
   flex-flow: wrap;
-  justify-content: center;
+  justify-content: space-around;
   line-height: 1;
   align-items: baseline;
   height: 22%;
